[gd_scene load_steps=3 format=3 uid="uid://dffnd61x6j218"]

[ext_resource type="Texture2D" uid="uid://d1ap424xtuhjq" path="res://arts/village_background.png" id="1_md0ai"]
[ext_resource type="Script" path="res://city.gd" id="1_pc81w"]

[node name="City" type="CanvasLayer"]
script = ExtResource("1_pc81w")

[node name="VillageBackground" type="Sprite2D" parent="."]
texture = ExtResource("1_md0ai")
offset = Vector2(550, 190)

[node name="Container" type="Control" parent="."]
layout_direction = 2
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Player" type="VBoxContainer" parent="Container"]
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 146.0
grow_horizontal = 0

[node name="Warriors" type="Label" parent="Container/Player"]
layout_mode = 2
tooltip_text = "This is the number of warrior the village have to defend the village. These can be recruited into your army."
mouse_filter = 1
text = "Warriors: 100"

[node name="Farmers" type="Label" parent="Container/Player"]
layout_mode = 2
tooltip_text = "This is the number of farmers the village have for generating food."
mouse_filter = 1
text = "Farmers: 100"

[node name="Gold" type="Label" parent="Container/Player"]
layout_mode = 2
tooltip_text = "This is the amount of gold the village have for trading."
mouse_filter = 1
text = "Gold: 100"

[node name="Hides" type="Label" parent="Container/Player"]
layout_mode = 2
tooltip_text = "This is the number of hides the village have for trading."
mouse_filter = 1
text = "Hides: 100"

[node name="Thralls" type="Label" parent="Container/Player"]
layout_mode = 2
tooltip_text = "Thralls are slaves of the people."
mouse_filter = 1
text = "Thralls: 100"

[node name="CenterContainer2" type="CenterContainer" parent="Container"]
layout_mode = 0
offset_left = -1152.0
offset_right = -1048.0
offset_bottom = 146.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer2"]
layout_mode = 2

[node name="Warriors" type="Label" parent="Container/CenterContainer2/VBoxContainer"]
layout_mode = 2
tooltip_text = "This is the number of warrior the village have to defend the village. These can be recruited into your army."
mouse_filter = 1
text = "Warriors: 100"

[node name="Farmers" type="Label" parent="Container/CenterContainer2/VBoxContainer"]
layout_mode = 2
tooltip_text = "This is the number of farmers the village have for generating food."
mouse_filter = 1
text = "Farmers: 100"

[node name="Gold" type="Label" parent="Container/CenterContainer2/VBoxContainer"]
layout_mode = 2
tooltip_text = "This is the amount of gold the village have for trading."
mouse_filter = 1
text = "Gold: 100"

[node name="Hides" type="Label" parent="Container/CenterContainer2/VBoxContainer"]
layout_mode = 2
tooltip_text = "This is the number of hides the village have for trading."
mouse_filter = 1
text = "Hides: 100"

[node name="Thralls" type="Label" parent="Container/CenterContainer2/VBoxContainer"]
layout_mode = 2
tooltip_text = "Thralls are slaves of the people."
mouse_filter = 1
text = "Thralls: 100"

[node name="Control" type="Control" parent="."]
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_right = 1144.0
offset_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="Spacicng" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "










"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="BuyHide" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Press this button to buy a hide."
mouse_filter = 1
text = "Buy hide"

[node name="RecruitWarrior" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "press button to recruit warrior."
mouse_filter = 1
text = "Rescruit warrior"

[node name="BuildShip" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Build ship"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="SellHide" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
tooltip_text = "Press button to sell hide"
mouse_filter = 1
text = "Sell hide"

[node name="RecruitFarmer" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
tooltip_text = "Recruit farmer"
mouse_filter = 1
text = "Rescruit farmer"

[node name="UpgradeShip" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Upgrade ship"

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="BuyThrall" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
tooltip_text = "Press button to buy thrall."
mouse_filter = 1
text = "Buy thrall"

[node name="Rumors" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
tooltip_text = "press button to here some rumors.S"
mouse_filter = 1
text = "Rumors"

[node name="VBoxContainer4" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="SellThrall" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
tooltip_text = "press button to sell thrall"
mouse_filter = 1
text = "Sell thrall"

[node name="ExitButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
tooltip_text = "Press button to leave the village"
mouse_filter = 1
text = "Leave village"

[node name="Rumors" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -249.0
offset_top = -26.0
offset_right = 249.0
grow_horizontal = 2
grow_vertical = 0
text = "There is a rumor about some goblins in the caverns to the north."
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer/BuyHide" to="." method="_on_buy_hide_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer/RecruitWarrior" to="." method="_on_recruit_warrior_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer/BuildShip" to="." method="_on_build_ship_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/SellHide" to="." method="_on_sell_hide_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/RecruitFarmer" to="." method="_on_recruit_farmer_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/UpgradeShip" to="." method="_on_upgrade_ship_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer3/BuyThrall" to="." method="_on_buy_thrall_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer3/Rumors" to="." method="_on_rumors_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer4/SellThrall" to="." method="_on_sell_thrall_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer4/ExitButton" to="." method="_on_exit_button_pressed"]
